--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:htit-tracker-base]
+[env:htit-tracker]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 build_src_filter = -<*>
 lib_deps = 
 	stevemarple/MicroNMEA@^2.0.6
+
+[env:htit-tracker-base]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+build_src_filter = -<*>
 
 [env:htit-tracker-base-cdc]
 extends = env:htit-tracker-base
@@ -28,4 +34,10 @@ extends = env:htit-tracker-base-cdc
 build_src_filter = +<MicroNMEA-serial.cpp>
 lib_deps = 
 	stevemarple/MicroNMEA@^2.0.6
+
+[env:GNSS-transparent]
+extends = env:htit-tracker-base
+build_src_filter = +<GNSS-transparent.cpp>
+monitor_speed = 115200
+build_flags = 
 
